<resources>
    <string name="app_name">Tutor</string>
    <string name="title_activity_tab_tutor">TabTutorActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="text_language_english">English</string>
    <string name="text_language_thai">ไทย</string>
    <string name="text_teach_mode">Teach Mode</string>
    <string name="text_gender">gender</string>
    <string name="text_gender_uppercase">Gender</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_birthday">birthday</string>
    <string name="text_contact">contact</string>
    <string name="text_special">special</string>
    <string name="text_special_uppercase">Special</string>
    <string name="text_special_study_mode">Study Mode :</string>
    <string name="text_special_level">Level :</string>
    <string name="text_special_skill">Skill :</string>
    <string name="text_special_other">Other :</string>
    <string name="text_username">username</string>
    <string name="text_password">password</string>

    <string name="text_single">Single</string>
    <string name="text_group">Group</string>
    <string name="text_both">Both</string>
    <string name="text_level">Level</string>
    <string name="text_basic">Basic</string>
    <string name="text_fair">Fair</string>
    <string name="text_excellent">Excellent</string>
    <string name="text_other">Other</string>
    <string name="text_skill">Skill</string>
    <string name="text_price_per_hour">Price/Hr</string>

    <!-- Example -->
    <string name="home_student_name">Student Name</string>
    <string name="home_tutor_name">Tutor Name</string>
    <string name="text_my_profile">My Profile</string>
    <string name="text_tutor_detail">Tutor Detail</string>
    <string name="text_course_booking_details">Course Booking details</string>
    <string name="text_total">Total</string>
    <string name="text_rate">Rate</string>
    <string name="text_edit">Edit</string>
    <string name="text_delete">Delete</string>
    <string name="text_home">home</string>
    <string name="text_search_student">search student</string>
    <string name="text_search_teacher">search teacher</string>
    <string name="text_search">Search</string>
    <string name="text_notification_cap">Notification</string>
    <string name="text_post_cap">Post</string>
    <string name="text_Language_cap">Language</string>
    <string name="text_notification">notification</string>
    <string name="text_user">user</string>
    <string name="text_press_agian_to_exit">Please click BACK again to exit</string>
    <string name="text_filter">Filter</string>
    <string name="text_subject">Subject</string>
    <string name="text_bts">BTS</string>
    <string name="text_mrt">MRT</string>
    <string name="text_mall">MALL</string>
    <string name="text_account">Account</string>
    <string name="text_forgot_pw">Forgot Password?</string>
    <string name="text_click_here"><u>Click Here</u></string>
    <string name="text_my_coin">My Coins</string>
    <string name="text_my_coin_colon">My Coins:</string>
    <string name="text_view_tutor_profile">View Tutor Profile</string>
    <string name="text_accept_and_booking">Accept&amp;Booking</string>

    <string name="text_login_with_facebook">Login With Facebook</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>

    <!-- Register -->
    <string name="text_profile">Profile</string>
    <string name="text_next">Next</string>
    <string name="text_done">Done</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_date_of_birth">Date of Birth</string>
    <string name="text_email">Email</string>
    <string name="text_telephone">Telephone</string>
    <string name="text_line_id">Line ID</string>
    <string name="text_facebook">Facebook</string>
    <string name="text_school">School</string>
    <string name="text_program">Program</string>
    <string name="text_gpa">GPA</string>
    <string name="text_university">University</string>
    <string name="text_faculty">Faculty</string>
    <string name="text_one_of_two">1 of 2</string>
    <string name="text_two_of_two">2 of 2</string>
    <!-- Register Tutor -->
    <string name="text_one_of_five">1 of 5</string>
    <string name="text_two_of_five">2 of 5</string>
    <string name="text_three_of_five">3 of 5</string>
    <string name="text_four_of_five">4 of 5</string>
    <string name="text_five_of_five">5 of 5</string>
    <string name="text_history">History</string>
    <string name="text_about_me">About me</string>

    <!-- Status -->
    <string name="text_accept">Accept</string>
    <string name="text_decline">Decline</string>
    <string name="text_wait_for_payment">Wait for Payment..</string>
    <string name="text_confirmed">Confirmed</string>
    <string name="text_wait_for_response">Wait for Response..</string>
    <string name="text_cancel_request">Cancel Request</string>
    <string name="text_payment">Payment</string>

    <!-- Fliter -->
    <string name="text_add">Add</string>
    <string name="text_select_subject">Select Subject</string>
    <string name="text_select_course">Select Course</string>
    <string name="text_select_province">Select Province</string>
    <string name="text_select_city">Select City</string>
    <string name="text_filter_results">Filter Results</string>
    <string name="text_study_mode_colon">Study Mode:</string>
    <string name="text_level_colon">Level:</string>
    <string name="text_place_colon">Place:</string>
    <string name="text_zone_colon">Zone:</string>
    <string name="text_request">Request</string>

    <string name="text_date">Date</string>
    <!-- Day Month -->
    <string name="text_sunday">Sun</string>
    <string name="text_monday">Mon</string>
    <string name="text_tuesday">Tue</string>
    <string name="text_wednesday">Wed</string>
    <string name="text_thursday">Thu</string>
    <string name="text_friday">Fri</string>
    <string name="text_saturday">Sat</string>

    <string name="text_january">January</string>
    <string name="text_february">February</string>
    <string name="text_march">March</string>
    <string name="text_april">April</string>
    <string name="text_may">May</string>
    <string name="text_june">June</string>
    <string name="text_july">July</string>
    <string name="text_august">August</string>
    <string name="text_september">September</string>
    <string name="text_october">October</string>
    <string name="text_november">November</string>
    <string name="text_december">December</string>

    <string name="text_announce">Announce</string>

    <!-- Student -->
    <string name="title_activity_tab_student">TabStudentActivity</string>
    <string name="text_time_table">Time Table</string>
    <string name="text_add_time_table">Add Time Table</string>
    <string name="text_education">Education</string>
    <string name="text_status">Status</string>
    <string name="text_location">Location</string>
    <string name="text_my_time_table">My Time Table</string>
    <string name="text_find_tutor">Find Tutor</string>
    <string name="text_study_mode">Study Mode</string>
    <string name="text_province">Province</string>
    <string name="text_province_colon">Province:</string>
    <string name="text_city">City</string>
    <string name="text_city_colon">City:</string>
    <string name="text_college_colon">College:</string>
    <string name="text_school_colon">School:</string>
    <string name="text_zone">Zone</string>

    <!-- Tutor -->
    <string name="text_student">Student</string>
    <string name="text_course">Course</string>
    <string name="text_badges">Badges</string>
    <string name="text_people">People</string>
    <string name="text_find_student">Find Student</string>

    <string name="text_english">English</string>
    <string name="text_science">Science</string>
    <string name="text_art">Art</string>
    <string name="text_music">Music</string>
    <string name="text_math">Math</string>
    <string name="text_thai">Thai</string>

    <string name="text_course_booking_payment_top">If you make a payment.</string>
    <string name="text_course_booking_payment_bottom">We will send you the contact information of student to you</string>
</resources>
