<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white"
    tools:context="siam.big.tutor.tutor.activity.register.TutorRegisterPageFourActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        style="@style/toolbar"
        android:layout_height="64dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imgNext"
                    android:layout_alignParentRight="true"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_arrow_right_white"/>
                <TextView
                    android:id="@+id/tvNext"
                    android:text="@string/text_next"
                    android:textColor="@color/color_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/imgNext"
                    android:textSize="18sp"
                    android:gravity="right"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <TextView
                android:id="@+id/tvTitle"
                android:text="@string/text_time_table"
                style="@style/toolbar_title"
                android:textSize="18sp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:text="@string/text_four_of_five"
                style="@style/toolbar_title"
                android:layout_below="@id/tvTitle"
                android:textColor="@color/color_gray_h"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/color_white">
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="7"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnDateMon"
                    android:layout_weight="1"
                    android:text="@string/text_monday"
                    android:background="@drawable/layout_border_conor_left"
                    style="@style/button_register_date" />
                <Button
                    android:id="@+id/btnDateTue"
                    android:layout_weight="1"
                    android:text="@string/text_tuesday"
                    style="@style/button_register_date"
                    android:background="@drawable/layout_border_not_left_right"/>
                <Button
                    android:id="@+id/btnDateWed"
                    android:layout_weight="1"
                    android:text="@string/text_wednesday"
                    style="@style/button_register_date"
                    android:background="@drawable/layout_border_not_left_right"/>
                <Button
                    android:id="@+id/btnDateThu"
                    android:layout_weight="1"
                    android:text="@string/text_thursday"
                    style="@style/button_register_date"
                    android:background="@drawable/layout_border_not_left_right"/>
                <Button
                    android:id="@+id/btnDateFri"
                    android:layout_weight="1"
                    android:text="@string/text_friday"
                    style="@style/button_register_date"
                    android:background="@drawable/layout_border_not_left_right"/>
                <Button
                    android:id="@+id/btnDateSat"
                    android:layout_weight="1"
                    android:text="@string/text_saturday"
                    style="@style/button_register_date"
                    android:background="@drawable/layout_border_not_left_right"/>
                <Button
                    android:id="@+id/btnDateSun"
                    android:layout_weight="1"
                    android:text="@string/text_sunday"
                    style="@style/button_register_date"
                    android:background="@drawable/layout_border_conor_right"/>
            </LinearLayout>
            <!-- Course -->
            <EditText
                android:id="@+id/etCourse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_province"
                style="@style/edittext_register"
                android:inputType="text"/>
            <!-- Province -->
            <EditText
                android:id="@+id/etProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_province"
                style="@style/edittext_register"
                android:inputType="text"/>
            <!-- City -->
            <EditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_city"
                style="@style/edittext_register"
                android:inputType="text"/>
            <!-- Zone -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_zone"
                style="@style/textview_register_title" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/btnZoneBts"
                        android:layout_weight="1"
                        android:text="@string/text_bts"
                        android:textSize="15sp"
                        android:textColor="@color/color_gray_m"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:background="@drawable/layout_border_conor_left"/>
                    <Button
                        android:id="@+id/btnZoneMrt"
                        android:layout_weight="1"
                        android:text="@string/text_mrt"
                        android:textSize="15sp"
                        android:textColor="@color/color_gray_m"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:background="@drawable/layout_border_not_left_right"/>
                    <Button
                        android:id="@+id/btnZoneMall"
                        android:layout_weight="1"
                        android:text="@string/text_mall"
                        android:textSize="15sp"
                        android:textColor="@color/color_gray_m"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="false"
                        android:background="@drawable/layout_border_conor_right"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>



