<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white"
    tools:context="siam.big.tutor.student.activity.register.StudentRegisterPageTwoActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        style="@style/toolbar"
        android:layout_height="64dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tvDone"
                    android:text="@string/text_done"
                    android:textColor="@color/color_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <TextView
                android:id="@+id/tvTitle"
                android:text="@string/text_education"
                style="@style/toolbar_title"
                android:textSize="18sp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:text="@string/text_two_of_two"
                style="@style/toolbar_title"
                android:layout_below="@id/tvTitle"
                android:textColor="@color/color_gray_h"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <!-- School -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_school"
        style="@style/textview_register_title" />
    <EditText
        android:id="@+id/etSchool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_school"
        style="@style/edittext_register"
        android:inputType="text"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <EditText
            android:id="@+id/etProgram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/text_program"
            style="@style/edittext_register"
            android:layout_marginRight="4dp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/etGpaSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/text_gpa"
            style="@style/edittext_register"
            android:layout_marginLeft="4dp"
            android:inputType="numberDecimal"/>
    </LinearLayout>
    <!-- University -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_university"
        style="@style/textview_register_title"
        android:layout_marginTop="12dp"/>
    <EditText
        android:id="@+id/etUniversity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_university"
        style="@style/edittext_register"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etFaculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_faculty"
        style="@style/edittext_register"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etGpaUniversity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_gpa"
        style="@style/edittext_register"
        android:inputType="numberDecimal"/>
</LinearLayout>
