<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="siam.big.tutor.student.activity.register.StudentRegisterPageOneActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        style="@style/toolbar"
        android:layout_height="64dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imgNext"
                    android:layout_alignParentRight="true"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_arrow_right_white"/>
                <TextView
                    android:id="@+id/tvNext"
                    android:text="@string/text_next"
                    android:textColor="@color/color_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/imgNext"
                    android:textSize="18sp"
                    android:gravity="right"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <TextView
                android:id="@+id/tvTitle"
                android:text="@string/text_profile"
                style="@style/toolbar_title"
                android:textSize="18sp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:text="@string/text_one_of_two"
                style="@style/toolbar_title"
                android:layout_below="@id/tvTitle"
                android:textColor="@color/color_gray_h"/>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/color_white">
           <!-- Name & Surname -->
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
               <ImageView
                   android:id="@+id/imgProfile"
                   android:layout_width="85dp"
                   android:layout_height="85dp"
                   android:layout_marginTop="8dp"
                   android:layout_marginRight="8dp"
                   android:src="@drawable/ic_add_image"
                   android:layout_alignParentRight="true"/>
               <LinearLayout
                   android:layout_toLeftOf="@id/imgProfile"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="vertical">
                   <EditText
                       android:id="@+id/etName"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/text_first_name"
                       style="@style/edittext_register"
                       android:inputType="text"/>
                   <EditText
                       android:id="@+id/etSurname"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/text_last_name"
                       style="@style/edittext_register"
                       android:inputType="text"/>
               </LinearLayout>
           </RelativeLayout>
            <!-- Birth Date -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edittext_register">
                <TextView
                    android:id="@+id/tvTitleBirthDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_date_of_birth"
                    android:textColor="@color/color_gray_h"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/tvBirthDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tvTitleBirthDate"
                    android:layout_marginLeft="24dp"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"
                    android:hint="00-00-0000"
                    android:textColor="@color/color_gray_m"
                    />
            </RelativeLayout>
            <!-- Gender -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edittext_register">
                <TextView
                    android:id="@+id/tvTitleGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_gender_uppercase"
                    android:textColor="@color/color_gray_h"
                    android:layout_centerVertical="true"
                    android:textSize="16sp" />
                <RadioGroup
                    android:id="@+id/rdgGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tvTitleGender"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rdbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_male"
                        android:layout_marginLeft="24dp"
                        android:textColor="@color/color_gray_m"/>
                    <RadioButton
                        android:id="@+id/rdbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_female"
                        android:layout_marginLeft="24dp"
                        android:textColor="@color/color_gray_m"/>
                </RadioGroup>
            </RelativeLayout>
            <!-- Email -->
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_email"
                style="@style/edittext_register"
                android:inputType="textEmailAddress"/>
            <!-- Phone -->
            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_telephone"
                style="@style/edittext_register"
                android:inputType="phone"/>
            <!-- Line ID -->
            <EditText
                android:id="@+id/etLineId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_line_id"
                style="@style/edittext_register"
                android:inputType="text"/>
            <!-- Facebook -->
            <EditText
                android:id="@+id/etFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_facebook"
                style="@style/edittext_register"
                android:inputType="text"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
